@startuml
entity "Familia" as familia {
  * id_familia : INT <<PK>>
  --
  nome_responsavel : VARCHAR(100)
  endereco : VARCHAR(150)
  telefone : VARCHAR(20)
}

entity "Voluntario" as voluntario {
  * id_voluntario : INT <<PK>>
  --
  nome_voluntario : VARCHAR(100)
}

entity "Estoque_Doacao" as estoque {
  * codigo_item : INT <<PK>>
  --
  categoria : VARCHAR(50)
  descricao_produto : VARCHAR(100)
  quantidade_disponivel : INT
}

entity "Atendimento_Recibo" as atendimento {
  * id_atendimento : INT <<PK>>
  --
  id_familia : INT <<FK>>
  id_voluntario : INT <<FK>>
  codigo_item : INT <<FK>>
  quantidade_entregue : INT
}

familia ||--o{ atendimento : "recebe"
voluntario ||--o{ atendimento : "registra"
estoque ||--o{ atendimento : "deduzidosem"
@enduml
